# document-editor

./: CMakeLists.txt  README.md  checklist.md  project-design.md
include/: Adapter.h  ApplicationSettings.h  ApplicationSettings.hpp  Builder.h  Chain.h  Command.h  CommandImpl.h  ConsoleRenderer.hpp  Decorator.h  Document.hpp  DocumentBuilder.hpp  DocumentElement.h  DocumentElement.hpp  ElementFactory.h  ElementFactory.hpp  Elements.h  FileManagerFacade.h  Flyweight.h  IRenderer.h  IRenderer.hpp  ImageProxy.h  ImageProxy.hpp  Interpreter.h  Iterator.h  IteratorVisitor.h  Mediator.h  Observer.h  Paragraph.hpp  RealImage.hpp  Serializer.h  State.h  Strategy.h  Validator.h
src/: ConsoleRenderer.cpp  ImageProxy.cpp  Paragraph.cpp  RealImage.cpp  main.cpp
